midnight release. starting to have the right shape.

--- a/_config.yml
+++ b/_config.yml
@@ -65,23 +65,23 @@ analytics:
 # Site Author
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
-  avatar           : "/assets/images/michael-rose.jpg"
-  bio              : "Just another boring, tattooed, time traveling, designer."
-  location         : "Buffalo, NY"
+  avatar           : 
+  bio              : 
+  location         : 
   email            :
-  uri              : "https://mademistakes.com"
-  home             : "https://mademistakes.com"
+  uri              : 
+  home             : 
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
   facebook         : *facebook
   foursquare       :
-  github           : "mmistakes"
+  github           : "davidedc"
   gitlab           :
   google_plus      :
   keybase          :
-  instagram        : "mmistakes"
+  instagram        :
   lastfm           :
   linkedin         :
   pinterest        :
