--- a/_config.yml
+++ b/_config.yml
@@ -100,8 +100,10 @@ author:
 include:
   - .htaccess
   - _pages
+
 exclude:
   - docs
+  - test
   - "*.sublime-project"
   - "*.sublime-workspace"
   - vendor
