--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ analytics:
   provider               : #"google-universal" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : #"UA-2011187-3" # Replace this with your ID, or delete
+    anonymize_ip         : # true, false (default)
 
 
 # Site Author
